Admin-Communication-Emailing-Templates : fixing responsivedesign, show template thumbnail on small device

--- a/web/css/admin-parameters-registration.css
+++ b/web/css/admin-parameters-registration.css
@@ -2718,6 +2718,7 @@ section .row.ending {
 
 .template-characteristic .template-img-container{
     width: 80px;
+    min-width: 80px;
     height: 100px;
     max-height: 100px;
     overflow: hidden;
